@@ -3,6 +3,9 @@
 ; License http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+COM_CONTENT_CHANGE_ARTICLE="Select or Change article"
+COM_CONTENT_CHANGE_ARTICLE_BUTTON="Select / Change"
+COM_CONTENT_SELECT_AN_ARTICLE="Select an Article"
 PLG_USER_PROFILE="User - Profile"
 PLG_USER_PROFILE_FIELD_ABOUT_ME_DESC="Choose an option for the field About Me."
 PLG_USER_PROFILE_FIELD_ABOUT_ME_LABEL="About Me:"
@@ -26,6 +29,8 @@ PLG_USER_PROFILE_FIELD_POSTAL_CODE_DESC="Choose an option for the field Postal C
 PLG_USER_PROFILE_FIELD_POSTAL_CODE_LABEL="Postal / ZIP Code:"
 PLG_USER_PROFILE_FIELD_REGION_DESC="Choose an option for the field Region"
 PLG_USER_PROFILE_FIELD_REGION_LABEL="Region:"
+PLG_USER_PROFILE_FIELD_TOS_ARTICLE_DESC="Select the desired Terms of Service article from the list"
+PLG_USER_PROFILE_FIELD_TOS_ARTICLE_LABEL="Select TOS Article:"
 PLG_USER_PROFILE_FIELD_TOS_DESC="Agree to terms of service"
 PLG_USER_PROFILE_FIELD_TOS_LABEL="Terms of Service:"
 PLG_USER_PROFILE_FIELD_WEB_SITE_DESC="Choose an option for the field Web Site"
