@@ -22,7 +22,8 @@
 	<config>
 		<fields name="params">
 
-			<fieldset name="basic">
+			<fieldset name="basic"
+				addfieldpath="/administrator/components/com_content/models/fields">
 				<field name="register-require-user" type="spacer" class="text"
 					label="PLG_USER_PROFILE_FIELD_NAME_REGISTER_REQUIRE_USER"
 				/>
@@ -139,6 +140,12 @@
 					<option	value="1">JOPTION_OPTIONAL</option>
 					<option	value="0">JDISABLED</option>
 				</field>
+				<field
+					name="register-require_tos_article"
+					type="modal_article"
+					label="PLG_USER_PROFILE_FIELD_TOS_ARTICLE_LABEL"
+					description="PLG_USER_PROFILE_FIELD_TOS_ARTICLE_DESC"
+				/>
 				<field
 					name="register-require_dob"
 					type="list"
@@ -266,6 +273,13 @@
 					<option	value="1">JOPTION_OPTIONAL</option>
 					<option	value="0">JDISABLED</option>
 				</field>
+				<field
+					name="profile-require_tos_article"
+					type="modal_article"
+
+					label="PLG_USER_PROFILE_FIELD_TOS_ARTICLE_LABEL"
+					description="PLG_USER_PROFILE_FIELD_TOS_ARTICLE_DESC"
+				/>
 				<field
 					name="profile-require_dob"
 					type="list"
